# nils-mathieu.fr

./: .gitignore  Cargo.toml  justfile
src/: app.rs  config.rs  main.rs
www/: 404.html  index.html  master.css
www/cv/: index.html
